the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2017-12-04] improved compiler optimization resilience of mpz_fspowm()
* [2017-12-01] release 1.3.7 of LibTMCG
* [2017-11-28] mpz_sqrtmp_r(), mpz_sqrtmp(), mpz_sqrtmp_fast(): fix memory leaks
* [2017-11-27] RFC4880: fixes some buffer underflows in PacketDecode()
* [2017-11-25] RFC4880: fixes some buffer underflows in SubpacketDecode()
* [2017-11-25] release 1.3.6 of LibTMCG
* [2017-11-25] RFC4880: added support for verification of some V3 signatures
* [2017-11-23] improved timing attack resilience of mpz_spowm()
* [2017-11-23] RFC4880: added return code 0xFE for non-fatal errors in PacketDecode()
* [2017-11-22] RFC4880: fixes a buffer overflow in SubpacketDecode()
* [2017-11-22] RFC4880: added V3 signature packets for PacketDecode()
* [2017-11-19] aiounicast: increase timeout of Send() for OpenBSD
* [2017-11-18] release 1.3.5 of LibTMCG
* [2017-11-18] RFC4880: fixes a bad return value in AsymmetricDecryptElgamal()
* [2017-11-17] changed interfaces of mpz helper functions *gcry_mpi*
* [2017-11-17] ASTC: fixes a bad mpz initialization in DSS::Sign()
* [2017-11-17] VTMF: fixes a memory leak found by valgrind
* [2017-11-16] RFC4880: fixes some memory leaks found by valgrind
* [2017-11-16] RFC4880: fixes memory leak of mpi's from dummy container
* [2017-11-16] RFC4880: added check for correct tag format of MDC packet
* [2017-11-09] release 1.3.4 of LibTMCG
* [2017-11-08] RFC4880: added features subpacket for MDC support
* [2017-11-08] RFC4880: added experimental key type 107 to keep track of x_rvss->QUAL 
* [2017-10-31] removed DKG tools (now contained in a separated package DKGPG)
* [2017-10-29] release 1.3.3 of LibTMCG