@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2017-12-05] increased S2K count to 0xAC (i.e. 1835008 iterations)
 * [2017-12-04] improved compiler optimization resilience of mpz_fspowm()
 * [2017-12-01] release 1.3.7 of LibTMCG
 * [2017-11-28] mpz_sqrtmp_r(), mpz_sqrtmp(), mpz_sqrtmp_fast(): fix memory leaks
